<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.example.redi.redischoolenrollapp.viewModels.LoginViewModel" />

    </data>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/redi_school_logo1"
        android:orientation="vertical"
        tools:context="com.example.redi.redischoolenrollapp.activities.MainActivity">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:persistentDrawingCache="animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:setError="@{loginViewModel.emailValidateErrorMessage}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_edt_email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:afterTextChanged="@{loginViewModel::validateEmailOnTextChanged}"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext|actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:text="@={loginViewModel.email}"
                app:layout_constraintVertical_bias="0.100000024" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:persistentDrawingCache="animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true"
            app:setError="@{loginViewModel.passwordValidateErrorMessage}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:afterTextChanged="@{loginViewModel::validatePasswordOnTextChanged}"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:text="@={loginViewModel.password}"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn_login"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:onClick="@{loginViewModel::onClickLoginBtn}"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="honeycomb" />

        <ProgressBar
            android:id="@+id/login_progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="@{loginViewModel.showProgressBar?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_txt_loginMessage"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/login_txt_loginMessage"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="10dp"
            android:text="@string/login_message"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            android:visibility="@{loginViewModel.showAccountNotFound?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="ice_cream_sandwich" />

        <Button
            android:id="@+id/login_btn_signUp"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_progressbar"
            app:layout_constraintVertical_bias="0.0"
            tools:targetApi="honeycomb" />

    </android.support.constraint.ConstraintLayout>
</layout>