<layout>

    <data>

        <import type="android.view.View" />


        <variable
            name="addCourseViewModel"
            type="com.example.redi.redischoolenrollapp.viewModels.AddCourseViewModel" />

    </data>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.redi.redischoolenrollapp.uifragments.CoursesFragment">

        <!-- TODO: Update blank fragment layout -->

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/courses_edt_name"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/course_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/describeTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
                app:layout_constraintVertical_bias="0.100000024">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/courses_edt_describe"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/urlTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/describeTextInputLayout"
                app:layout_constraintVertical_bias="0.100000024">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/courses_edt_url"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/course_url"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/courses_btn_add"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/course_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlTextInputLayout"
                app:layout_constraintVertical_bias="0.19"
                tools:targetApi="honeycomb" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>


</layout>