<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


        <variable
            name="userType"
            type="com.example.redi.redischoolenrollapp.entities.UserType" />

        <variable
            name="signUpViewModel"
            type="com.example.redi.redischoolenrollapp.viewModels.SignUpViewModel" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbarStyle="insideOverlay">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_sign_up"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            tools:context="com.example.redi.redischoolenrollapp.activities.SignUpActivity">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:setError="@{signUpViewModel.firstNameValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_firstName"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateFirstNameOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:text="@={signUpViewModel.firstName}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/describeTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                app:setError="@{signUpViewModel.lastNameValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_lastName"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateLastNameOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:text="@={signUpViewModel.lastName}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/apply_spinner_courses"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:entries="@{userType.myValues()}"
                android:onItemSelected="@{signUpViewModel::onUserTypeSelected}"
                app:layout_constraintBottom_toTopOf="@+id/signUp_btn_signUp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/describeTextInputLayout"
                app:layout_constraintVertical_bias="0.0" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/urlTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_spinner_courses"
                app:layout_constraintVertical_bias="0.0"
                app:setError="@{signUpViewModel.emailValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_email"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateEmailOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={signUpViewModel.email}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                app:passwordToggleEnabled="true"
                app:setError="@{signUpViewModel.passwordValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_password"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validatePasswordOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={signUpViewModel.password}" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPasswordTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                app:passwordToggleEnabled="true"
                app:setError="@{signUpViewModel.confirmPasswordValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_confirmPassword"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateConfirmPasswordOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:text="@={signUpViewModel.confirmPassword}"
                    app:passwordToggleEnabled="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                app:setError="@{signUpViewModel.addressValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_address"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateAddressOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    android:text="@={signUpViewModel.address}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:persistentDrawingCache="animation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                app:setError="@{signUpViewModel.describeValidateErrorMessage}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signUp_edt_describe"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:afterTextChanged="@{signUpViewModel::validateDescribeOnTextChanged}"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textPersonName"
                    android:text="@={signUpViewModel.describe}" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/signUp_btn_signUp"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:onClick="@{signUpViewModel::onClickRegisterBtn}"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="honeycomb" />

            <android.support.v4.widget.ContentLoadingProgressBar
                style="@android:style/Widget.Material.Light.ProgressBar.Large.Inverse"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="true"
                android:max="90"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="@{signUpViewModel.showProgressBar?View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>

